--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "run-p watch:tailwind start:app",
+    "start:app": "react-scripts start",
+    "watch:tailwind": "postcss -w src/assets/tailwind.css -o src/tailwind.generated.css",
+    "prebuild": "npm run build:tailwind",
     "build": "react-scripts build",
+    "build:tailwind": "postcss src/assets/tailwind.css -o src/tailwind.generated.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -20,7 +24,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "postcss-cli": "^8.0.0",
+    "postcss-preset-env": "^6.7.0",
     "react-scripts": "3.4.3",
+    "tailwindcss": "^1.8.10",
     "typescript": "~3.7.2"
   },
   "eslintConfig": {
