--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "weather-icons": "https://github.com/erikflowers/weather-icons.git"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -24,6 +25,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "npm-run-all": "^4.1.5",
     "postcss-cli": "^8.0.0",
     "postcss-preset-env": "^6.7.0",
     "react-scripts": "3.4.3",
